# my_pytorch_kit

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: ci.yaml
docs/models/: ae.md  classifier.md  vae.md
examples/: example.py  tune_example.py
examples/mnist/autoencoder/: ae.py  ae_ood.py  ae_plots.py
examples/mnist/classifier/: classifier.py  example.py  test_interactive.py  tune.py
examples/mnist/generator/: vae.py  vae_semi_generate.py
examples/mnist/utils/: mnist_utils.py
examples/mnist/vae/: vae.py  vae_semi_generate.py  vae_semi_tune.py  vae_with_ae.py
examples/models/: ae.pt  classifier.pt  mnist_vae_semi_tuned.pt  model.pt  vae.pt  vae_model_1.pt  vae_semi_2.pt  vae_semi_3.pt  vae_with_ae.pt
my_pytorch_kit/evaluation/: evaluation.py  reconstruction.py
my_pytorch_kit/model/: ae.py  classifier.py  models.py  utils.py  vae.py
my_pytorch_kit/train/: optimizers.py  tensorboard.py  train.py  tune.py
scripts/: ship.sh  update-version.sh
tests/model/: test_architect.py  test_base_model.py
tests/train/: test_train.py
