
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_pytorch_kit"
version = "0.1.0"
authors = [
  { name="Noah Schlenker", email="noschl@proton.me" },
]
description = "My toolkit for pytorch model development"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "torch",
    "tqdm",
    "tensorboard",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
 "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
# Tell pytest where to find the tests
testpaths = [
    "tests",
]
